# encoding-rust

./: Cargo.toml
examples/: delta_encoding_64.rs
src/: bitpacker64.rs  delta_encoding_64.rs  lib.rs  zig_zag.rs
src/delta_encoding_64/: delta_vec.rs
