[package]
name = "encoding-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vlq = { package = "vlq-rust", version = "0.2" }
anyhow = "1.0.62"
crunchy = "0.2.2"
serde = "1.0.147"
serde_derive = "1.0.147"
bytes = "1.2.1"
rust_decimal = "1.26.1"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde_json = "1.0.87"
